Insert Information Product

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *= require header
  *= require index
  *= require footer
+ *= require leftcontent
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
