--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,5 @@
-<% if flash[:notice] %>
-    <div class="alert alert-success"><%= flash[:notice] %></div>
-  <% end %>
+<% if flash[:notice1] %>
+  <div class="alert alert-success"><%= flash[:notice1] %></div>
+<% else %>
+  <div class="alert alert-danger"><%= flash[:notice2] %></div>
+<% end %>
